<resources>
    <string name="app_name">Constaint Layout Sample</string>
    <string name="move_short_description">"Kern County Deputy Sheriff Joe Deacon is sent to Los Angeles for what should have been a quick evidence-gathering assignment. Instead, he becomes embroiled in the search for a serial killer who is terrorizing the city."</string>
    <string name="director_label">Director:</string>
    <string name="director">John Lee Hancock</string>
    <string name="actors_label">Actors</string>
    <string name="actor_1">Denzel Washington</string>
    <string name="actor_2">Rami Malek</string>
    <string name="actor_3">Jared Leto</string>
    <string name="actor_4">Chris Bauer</string>
    <string name="like">Like</string>
    <string name="watch">Watch</string>
    <string name="movie_title">The Little Things</string>
    <string name="share">Share</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>