<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/movie_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:text="@string/movie_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:layout_goneMarginEnd="16dp" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:maxWidth="100dp"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintTop_toBottomOf="@id/banner"
            app:srcCompat="@drawable/poster" />

        <TextView
            android:id="@+id/director_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/director_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/director"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/director"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constrainedWidth="true"
            app:layout_constraintBaseline_toBaselineOf="@id/director_label"
            app:layout_constraintBottom_toBottomOf="@id/director_label"
            app:layout_constraintEnd_toStartOf="@id/poster"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/director_label"
            app:layout_constraintTop_toTopOf="@id/director_label"
            app:layout_goneMarginEnd="16dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/title_poster_bottom_barrier"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="title, poster, director_label, director" />

        <TextView
            android:id="@+id/short_descriptions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/move_short_description"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/title_poster_bottom_barrier" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:constraint_referenced_ids="actor_1, actor_2, actor_3, actor_4"
            app:flow_horizontalBias="0"
            app:flow_horizontalGap="8dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalGap="8dp"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/short_descriptions" />

        <TextView
            android:id="@+id/actor_1"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_1" />

        <TextView
            android:id="@+id/actor_2"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_2" />

        <TextView
            android:id="@+id/actor_3"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_3" />

        <TextView
            android:id="@+id/actor_4"
            style="@style/Actor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actor_4" />

        <Button
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/like"
            app:layout_constraintEnd_toStartOf="@id/watch"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/actors" />

        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/watch"
            app:layout_constraintEnd_toStartOf="@id/share"
            app:layout_constraintStart_toEndOf="@id/like"
            app:layout_constraintTop_toBottomOf="@id/actors" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/watch"
            app:layout_constraintTop_toBottomOf="@id/actors" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>